Ho fatto molte cose:  - il server è rudimentale ma funzionicchia  - il client fa ancora schifo

--- a/src/sample/view/startScreen.fxml
+++ b/src/sample/view/startScreen.fxml
@@ -11,7 +11,7 @@
          <image>
             <Image url="@provasf.png" />
          </image></ImageView>
-      <JFXButton styleClass="startScreenButton" />
-      <JFXButton styleClass="startScreenButton" />
+      <JFXButton text="Play" styleClass="startScreenButton" />
+      <JFXButton text="Option" styleClass="startScreenButton" />
    </children>
 </VBox>
