--- a/src/sample/view/startScreen.fxml
+++ b/src/sample/view/startScreen.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox id="vboxStartScreen" stylesheets="@launchScreen.css" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="vboxStartScreen" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@launchScreen.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="171.0" fitWidth="422.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="200.0" fitWidth="668.0" pickOnBounds="true" preserveRatio="true" style="-fx-translate-y: -100;">
          <image>
-            <Image url="@provasf.png" />
+            <Image url="@ATTEMPT1.png" />
          </image></ImageView>
-      <JFXButton text="Play" styleClass="startScreenButton" />
-      <JFXButton text="Option" styleClass="startScreenButton" />
+      <JFXButton styleClass="startScreenButton" text="Play" />
+      <JFXButton styleClass="startScreenButton" text="Option" />
    </children>
 </VBox>
