--- a/src/sample/view/chessboardOnline.fxml
+++ b/src/sample/view/chessboardOnline.fxml
@@ -3,22 +3,13 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXSnackbar?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.Group?>
+<?import javafx.scene.layout.*?>
+<?import java.lang.*?>
 <SplitPane fx:id="root" dividerPositions="0.8" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="732.0" prefWidth="1072.0" stylesheets="@gameView.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.view.OnlineGameViewController">
 
 
@@ -462,7 +453,7 @@
                             <bottom>
                                 <HBox alignment="CENTER" prefHeight="55.0" prefWidth="823.0" BorderPane.alignment="CENTER">
                                     <children>
-                                        <Label fx:id="blackUsername" style="-fx-background-radius: 0px;" styleClass="userNameLabel" text="Player2" textFill="#262626">
+                                        <Label fx:id="myUsername" style="-fx-background-radius: 0px;" styleClass="userNameLabel" text="Player2" textFill="WHITE">
                                             <HBox.margin>
                                                 <Insets />
                                             </HBox.margin>
@@ -475,7 +466,7 @@
                             <top>
                                 <HBox alignment="CENTER" prefHeight="62.0" prefWidth="823.0" BorderPane.alignment="CENTER">
                                     <children>
-                                        <Label fx:id="whiteUsername" style="-fx-background-radius: 0px;" styleClass="userNameLabel" text="Player1" textFill="WHITE">
+                                        <Label fx:id="opponentUsername" style="-fx-background-radius: 0px;" styleClass="userNameLabel" text="Player1" textFill="WHITE">
                                             <padding>
                                                 <Insets left="40.0" right="40.0" />
                                             </padding></Label>
